# clio

./: LICENSE  README.md  example.env  pyproject.toml
Frontend/cleo-planning-dashboard/: AI-REFERENCE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
Frontend/cleo-planning-dashboard/src/: App.vue  main.js  style.css  style.scss
Frontend/cleo-planning-dashboard/src/components/: FeatherIcon.vue  GovUkDemo.vue  GovUkExample.vue
Frontend/cleo-planning-dashboard/src/data/: api.js  sampleData.js
Frontend/cleo-planning-dashboard/src/router/: index.js
Frontend/cleo-planning-dashboard/src/services/: boundary.js  geocode.js  landRegistry.js  overpass.js
Frontend/cleo-planning-dashboard/src/views/: Dashboard.vue  Home.vue
data/: Planning Hack Data v0.1.csv  Planning Hack Data v0.2.xlsx  master-sheet updated.xlsx  summaries.pq  website_data.pq
scripts/: check_application.py  summarise_past_apps.py  test_summary_summaries.py
src/: openai.py
src/clio/: summarise.py
src/clio/api/: api.py  mcp.py  models.py
src/clio/summary/: openai_summariser.py  summary_model.py
