[project]
name = "clio"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.76.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
